NULL answer strategies added; Cache API inf + bugfixing
