# tools/static/OpenAPI.yml
@@ -264,7 +264,16 @@ components:
       description: "If set, only the 'x' highest ranked suggested Web API elements will be returned per result list"
       schema:
         type: integer
-
+    no-answer-strategy:
+      name: no-answer-strategy
+      in: query
+      required: false
+      description: "For each fragment, RESTBERTa outputs a treshold value (also refered as 'NULL answer score') that indicates whether the fragment contains the queried Web API element or not. Predicted Web API elements with a score less than this treshold might not be considered as valid answers. Thus, if this query parameter is set to 'threshold', only Web API elements with a score higher than the treshold of the respective fragment (i.e., ) will be returned. If set to 'ignore' or omitted (default), these tresholds will be ignored."
+      schema:
+        type: string
+        enum:
+          - "ignore"
+          - "treshold"
 paths:
   /:
     get:
@@ -297,6 +306,7 @@ paths:
       parameters:
         - $ref: "#/components/parameters/duplicates"
         - $ref: "#/components/parameters/top"
+        - $ref: "#/components/parameters/no-answer-strategy"
       requestBody:
         required: true
         content:
